# slim-MCP

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  calendar_tool.py  currency_tool.py  cursor_context.py  date_time_tool.py  email_tool.py  mcp_server.py  pyproject.toml  requirements.txt  simple_cursor_server.py  task_tool.py
src/claude_tools/: calculator.py  datetime_tool.py  main.py  weather.py
