[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-tools"
version = "0.1.0"
description = "Multi-tool MCP integration for Claude"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=0.1.0",
]

[project.scripts]
claude-tools = "claude_tools.main:main"
